# nda2ynab

./: .gitignore  Cargo.toml  README.md  default.nix
src/: main.rs
