[package]
name = "nda2ynab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
clap = { version = "3.1.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
regex = "1.5.5"
chrono = "0.4.19"
itertools = "0.10.3"
